Added custom naming of ModelRuns

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -607,9 +607,12 @@
     "            #    d.preview_fpth()\n",
     "                \n",
     "            fpths = [v for k,v in self.fpths_outputs.items()]\n",
+    "            no_display = ['jpg', 'png']\n",
     "            if len(fpths)==0:\n",
     "                display(Markdown('select the file(s) that you would like to display from the \"outputs\" list above '))\n",
     "            else:\n",
+    "                display([os.path.splitext(fpth)[1] for fpth in fpths])\n",
+    "                display(fpths)\n",
     "                display(DisplayFiles(fpths))\n",
     "                \n",
     "    def _show_log(self, sender):\n",
@@ -765,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,13 +797,16 @@
     "            os.makedirs(self.fdir_input)\n",
     "        for filename in os.listdir(self.fdir_input):\n",
     "            if filename.endswith(\".json\"):\n",
-    "                self.batch.append(self._create_process(process_name=os.path.splitext(filename)[0], di=di)) \n",
+    "                process_name = os.path.splitext(filename)[0]\n",
+    "                process = self._create_process(process_name=process_name, di=di)\n",
+    "                if process_name == 'TEMPLATE':\n",
+    "                    self.batch.insert(0, process)\n",
+    "                else:\n",
+    "                    self.batch.append(process) \n",
     "\n",
-    "        filename = os.path.basename(fpth_script)\n",
-    "        process_name = '{0}_{1}'.format(os.path.splitext(filename)[0],'_template')\n",
-    "        \n",
+    "        filename = os.path.basename(di_config['fpth_script'])\n",
     "        if not self.batch:\n",
-    "            self.batch.append(self._create_process(process_name=process_name, di=di))\n",
+    "            self.batch.append(self._create_process(process_name='TEMPLATE', di=di))\n",
     "        \n",
     "        self.inputconfigs = self.batch\n",
     "       \n",
@@ -887,7 +893,7 @@
     "        return [process['config']['process_name'] for process in self.processes]\n",
     "    \n",
     "    def _get_apps_layout(self):\n",
-    "        return [widgets.VBox([l.layout, l.out]) for l in self.li]\n",
+    "        return [widgets.VBox([l.layout, l.out]) for l in self.li[1:]]\n",
     "        \n",
     "    def _add_run(self, sender):\n",
     "        # Create Dropdown & Run Button\n",
@@ -915,7 +921,7 @@
     "    def _del_run(self, sender):\n",
     "        # Create Dropdown & Run Button\n",
     "        self.del_run_dd = widgets.Dropdown(\n",
-    "                options=self._get_process_names(),\n",
+    "                options=self._get_process_names()[1:],\n",
     "                description='Run to Delete:',\n",
     "                disabled=False)\n",
     "        self.del_run_btn = widgets.Button(description='delete chosen run',\n",
@@ -940,7 +946,7 @@
     "                os.remove(l.config['fpth_inputs'])\n",
     "                self.li.remove(l)\n",
     "            \n",
-    "        self.del_run_dd.options=self._get_process_names() # Update Dropdown\n",
+    "        self.del_run_dd.options=self._get_process_names()[1:] # Update Dropdown\n",
     "        self.apps_layout.children = self._get_apps_layout()\n",
     "    \n",
     "    def _run_add_run(self,sender):\n",
@@ -948,29 +954,23 @@
     "        # Pull selected process from dropdown\n",
     "        dd_val = self.add_run_dd.value\n",
     "        dd_split = str(self.add_run_dd.value).split('_')\n",
-    "        new_process_name = self.add_run_txt.value\n",
-    "        if not new_process_name:\n",
+    "        process_name_base = self.add_run_txt.value\n",
+    "        if not process_name_base:\n",
     "            with self.out:\n",
     "                display(Markdown('Empty Name'))\n",
     "            return\n",
     "            \n",
-    "        '''# Get basename of selected process\n",
-    "        if(dd_split[-1].isdigit()):\n",
-    "            dd_process_name_base = \"_\".join(dd_split[:-1])\n",
-    "        else:\n",
-    "            dd_process_name_base = dd_val\n",
-    "            \n",
-    "        # Create new process name, by\n",
-    "        # appending the next number to the basename\n",
+    "        basenumbers = [process.split('_')[0] for process in self._get_process_names()]\n",
+    "        print(basenumbers)\n",
     "        current_num = 0\n",
     "        num_exists = True\n",
     "        new_process_name = \"\"\n",
     "        while (num_exists):\n",
-    "            new_process_name = '{0}_{1}'.format(dd_process_name_base,str(current_num).zfill(3))\n",
-    "            if new_process_name in self._get_process_names():\n",
+    "            if str(current_num).zfill(3) in basenumbers:\n",
     "                current_num = current_num + 1   \n",
     "            else:\n",
-    "                num_exists = False'''\n",
+    "                new_process_name = '{0}_{1}'.format(str(current_num).zfill(3),process_name_base)\n",
+    "                num_exists = False\n",
     "    \n",
     "        \n",
     "        # Copy the selected process to the new process\n",
@@ -1010,7 +1010,7 @@
     "        \n",
     "        with self.out:\n",
     "            clear_output()\n",
-    "            display(Markdown('{0} out of {1} scripts selected to be run'.format(cnt,ttl)))\n",
+    "            display(Markdown('{0} out of {1} scripts selected to be run'.format(cnt,ttl-1)))\n",
     "            for l in self.li:\n",
     "                if l.check.value:\n",
     "                    display(Markdown('running: {0}'.format(l.config['process_name'])))\n",
@@ -1029,20 +1029,20 @@
     "class RunAppComparison(RunApp):\n",
     "        \n",
     "    def _edit_inputs(self, sender):\n",
-    "        comp_vals = []\n",
+    "        comp_vals = {}\n",
     "        \n",
     "        if \"fdir_compareinputs\" in self.config:\n",
     "            comp_vals_dir = self.config[\"fdir_compareinputs\"]\n",
     "            for dir in os.listdir(comp_vals_dir):\n",
     "                full_dir = os.path.join(comp_vals_dir, dir)\n",
     "                if os.path.isdir(full_dir):\n",
-    "                    comp_vals.append(full_dir)\n",
+    "                    comp_vals[dir] = full_dir\n",
     "            json_data = read_json(self.config[\"fpth_inputs\"])\n",
     "            for element in json_data:\n",
     "                if element[\"name\"] == \"Comparison\":\n",
     "                    element[\"options\"] = comp_vals\n",
     "                    for value in element[\"value\"]:\n",
-    "                        if value not in comp_vals:\n",
+    "                        if value not in comp_vals.values():\n",
     "                            element[\"value\"].remove(value)\n",
     "            write_json(json_data, fpth=self.config[\"fpth_inputs\"])\n",
     "\n",
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "505a632f91c34e98ac4de5b34a61faea",
+       "model_id": "622340a0a0ce48d7877f8a2e336ba240",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1097,7 +1097,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "675d16534be8438d8204e2dfe2b44b7d",
+       "model_id": "49e48c287deb46ebb7a1757ee461b39f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1166,7 +1166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fc0de7143b84884901b638f2d726a70",
+       "model_id": "e4791a80fdb043d0875ff969261bf9f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1180,7 +1180,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57774e5f2bbf4c288c1c073a2f0e3d20",
+       "model_id": "a0091317ac5d48a79c0e630915fe3350",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1270,7 +1270,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0768f2a053164f4f8930753515eccb3a",
+       "model_id": "79c1ba3d93624b329c4a0071c78df77f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1284,7 +1284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b5cbb91a0774e719adc98a9c969d279",
+       "model_id": "bda850de704b48088e0926e3a77daf8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1298,7 +1298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f785eba9628e4aeabcb3ff9b05a58edc",
+       "model_id": "97c81d7bc5474870a8fe9b416e186675",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1312,7 +1312,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afff51c6a2074afab6040623b57f34ff",
+       "model_id": "fd6d7f0cc8494ff98e7d02fb192e4103",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1326,7 +1326,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03c57f627e174a269af3321ef61e28e4",
+       "model_id": "90d8f3f3bdf84052b579fad50eb8f283",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1340,7 +1340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c7a1b1954c44eeea541259315be36d2",
+       "model_id": "4d0f6004042448448188622afa2872b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1354,7 +1354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4cb9d17420a457788155ea36f72f953",
+       "model_id": "046e55259369445eafd9c2bce86b62ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1368,7 +1368,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17e85746cb514a19a0a49974eeebe083",
+       "model_id": "1f30e17aaf4c4115a0512ac8c66397ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1457,7 +1457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fbe313c40374e778b160276e9c8c206",
+       "model_id": "56196c06c4344fde8b1c7a9f9314567a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1471,7 +1471,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91de99526a0e4b3ababc6877002a0d3f",
+       "model_id": "5c8c5126fcf44398b795f9c118bb671c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1485,7 +1485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30b202330aea46079d1e6ceaffb9a6c3",
+       "model_id": "2616c8b5bf6f4cb2abb2db9adf07622d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1499,7 +1499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3308e8e1ba7f4401ac133c2206c92265",
+       "model_id": "7b42880434be4cba9dae8674847c78ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1513,7 +1513,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ef2705217184e84b2bbf8a2198cf543",
+       "model_id": "5f9893c68c2f495b85e9a11fd2d51c19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1527,7 +1527,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eac97548ea04a7a86b1df950b69e8b0",
+       "model_id": "a0e143221a0f468ea4c12a73014693ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1541,7 +1541,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce6469d1cb874d35921cdb40515114a5",
+       "model_id": "4181b85d3e694c44934b29880fe4e825",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1555,7 +1555,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d70d890235740a3b351debf54528cb8",
+       "model_id": "2b650588ae014d9dba0016acfcd156f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1581,124 +1581,6 @@
     {
      "data": {
       "text/markdown": [],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "### Example6"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Batch Run of RunApps, for ModelRun"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdc974dfcf734eb09a493f2302316dd8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Button(icon='eye-slash', layout=Layout(width='5%'), style=ButtonStyle(font_weight='bold'), tool…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7a98e1e2059440cb5aa7ce14137ed84",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06a338aec1264146bd093442f5eee6d0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Compare Runs"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1351e6f6d464459a9d43bc3a9cac2b4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e604daa6d5e4c23a8402495f41667a1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
@@ -1963,6 +1845,13 @@
     "    display(compare_runs)\n",
     "    display(Markdown('---'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
