--- a/ipyrun/overheating-app.ipynb
+++ b/ipyrun/overheating-app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,8 +1043,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -1097,7 +1099,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a260f500494b44198bfaf84e694ff282",
+       "model_id": "0e955a22dd2849948ac3d143d1eadb96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1111,7 +1113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09a6d0adcd7f4b7ab0711c8b8ec1aba9",
+       "model_id": "953a451c0ca34a16aa609bf437114991",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1125,7 +1127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bdfeb48cd034a37815da55089116f92",
+       "model_id": "d204729e4ff543e79de73670b8a394b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1175,7 +1177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e11dfc0c93854cc8a40909ab1e5b4b56",
+       "model_id": "b98c525cf2dc4db48acb2e8bd49c6c0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1189,7 +1191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce2875e1274b4367ac0d9456aa41bff5",
+       "model_id": "3213ce4af9e849ab8e7b52aa169a47b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1266,8 +1268,24 @@
     "    display(Markdown('---'))\n",
     "    display(Markdown('##### Step 2: Compare Runs'))\n",
     "    display(Markdown('''Choose multiple runs, which can be compared'''))\n",
-    "    display(compare_runs)\n"
+    "    display(compare_runs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
