--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +302,11 @@
     "                self.fpths.remove(fpth)\n",
     "                self.fpths += recursive_glob(rootdir=fpth)\n",
     "\n",
+    "        y = ['.xlsx']\n",
+    "        for fpth in self.fpths:\n",
+    "            if os.path.splitext(fpth)[1].lower() not in y:\n",
+    "                self.fpths.remove(fpth)\n",
+    "                \n",
     "        self.fnms = [os.path.basename(fpth) for fpth in self.fpths];\n",
     "        self._init_previews()\n",
     "        self._init_form()\n",
@@ -327,6 +332,7 @@
     "        self.outputsfpth.observe(self._show_hide, 'value')\n",
     "    \n",
     "    def display_previews(self):\n",
+    "        print(self.outputsfpth.value)\n",
     "        for file in self.outputsfpth.value:\n",
     "            display(Markdown('#### {0}'.format(os.path.splitext(os.path.basename(file))[0])))\n",
     "            s = str(self.map_previews[file]._map[self.map_previews[file].ext])\n",
@@ -353,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -386,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99eddee5835e40f4ae9c7808ef946c5f",
+       "model_id": "8830df59051943a28cb72b416bab30c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -455,7 +461,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad1e8f3a81e6452eb1f1b07bc1b32e50",
+       "model_id": "020eb99718874fe9917041b106b7076e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,12 +475,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1d6dcc1178441ee8721790c7448d28a",
+       "model_id": "ff2e9b55b7d34e9aac06fde21cdd92ed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_csv.csv', 'eg_docx…"
+       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_docx.docx', 'eg_jp…"
       ]
      },
      "metadata": {},
@@ -483,7 +489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70ff61e5719e4ac0b63612cd8302b2c3",
+       "model_id": "9b7635ffc0e74325a027082dae11d3f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,7 +549,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d72335ed5f9f442b8ffd153b94c2e627",
+       "model_id": "5dffa28c956f4a439f9b481624078292",
        "version_major": 2,
        "version_minor": 0
       },
@@ -557,12 +563,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08155dec650147fa895f0fe78dc171ab",
+       "model_id": "d0e842110d9d42159bdf112f6605bc45",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_jpg_1.jpg', 'eg_jp…"
+       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_jpg_2.jpg',), valu…"
       ]
      },
      "metadata": {},
@@ -571,7 +577,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bc12ae6ca0443408897898938ed44a9",
+       "model_id": "a7667f41e43847b984656586344ba7d1",
        "version_major": 2,
        "version_minor": 0
       },
