Fixed issue with multiple nested widgets

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "622340a0a0ce48d7877f8a2e336ba240",
+       "model_id": "738def617b67478fb6e7c5ca2af1f8a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1097,34 +1097,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49e48c287deb46ebb7a1757ee461b39f",
+       "model_id": "c6352703e71d4dc58d8a3f5c49735b8f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
       ]
      },
      "metadata": {},
@@ -1166,7 +1144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4791a80fdb043d0875ff969261bf9f4",
+       "model_id": "32e3c03bcfd943af8f78db5228b68fdb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1180,7 +1158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0091317ac5d48a79c0e630915fe3350",
+       "model_id": "b313b112b864479c8b3f47045f8c14bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1270,7 +1248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79c1ba3d93624b329c4a0071c78df77f",
+       "model_id": "33828092390345cf86129cab97d516e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1284,7 +1262,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bda850de704b48088e0926e3a77daf8c",
+       "model_id": "e456e6d47f04453a83a8bbadeb51c2b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1298,7 +1276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97c81d7bc5474870a8fe9b416e186675",
+       "model_id": "6be22dcaf65b41d084998f5dde517b41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1312,7 +1290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd6d7f0cc8494ff98e7d02fb192e4103",
+       "model_id": "3059df801d3b4dd1878724910516d83a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1326,7 +1304,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90d8f3f3bdf84052b579fad50eb8f283",
+       "model_id": "036917588ecd420998ce9832ba18eb65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1340,7 +1318,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d0f6004042448448188622afa2872b6",
+       "model_id": "0955a907395645a3a76b0c9ab2680e28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1354,7 +1332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "046e55259369445eafd9c2bce86b62ee",
+       "model_id": "eecb47e76fe444cfacebe61f8b69f4c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1368,7 +1346,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f30e17aaf4c4115a0512ac8c66397ba",
+       "model_id": "1b21e045b31e4970bd227a7a84e578d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1457,7 +1435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56196c06c4344fde8b1c7a9f9314567a",
+       "model_id": "c2fe19458e9640f7b906bae688df4658",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1471,7 +1449,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c8c5126fcf44398b795f9c118bb671c",
+       "model_id": "f887cc20471f425f95448df29e06adb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1485,7 +1463,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2616c8b5bf6f4cb2abb2db9adf07622d",
+       "model_id": "b4bf9126044e48b682febb1612a1f249",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1499,7 +1477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b42880434be4cba9dae8674847c78ac",
+       "model_id": "1c7cb4fb2140410696effa901b4899c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1513,7 +1491,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f9893c68c2f495b85e9a11fd2d51c19",
+       "model_id": "f1917ce853ce407d904647c6dc0906e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1527,7 +1505,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0e143221a0f468ea4c12a73014693ee",
+       "model_id": "bd3894ab2b1c4f188ffcda46e0775996",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1541,7 +1519,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4181b85d3e694c44934b29880fe4e825",
+       "model_id": "edae054d8a6044f6a389bf21d1ee366e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1555,7 +1533,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b650588ae014d9dba0016acfcd156f6",
+       "model_id": "709a132fcb454d939529ab37d1fba0ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1581,6 +1559,124 @@
     {
      "data": {
       "text/markdown": [],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Example6"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Batch Run of RunApps, for ModelRun"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e064813daa640329b671448b152937c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(icon='eye-slash', layout=Layout(width='5%'), style=ButtonStyle(font_weight='bold'), tool…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c5f5b987f8684d86abf731cec98d3c3b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f73ca4b5b13c4c918beed7805e90045f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Compare Runs"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2c774ddc0d743bab4ab674ddeb555d0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "845ccd026bf2488d9236722efee65b46",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
@@ -1613,13 +1709,11 @@
     "        }\n",
     "    }    \n",
     "\n",
+    "    \n",
     "    rjson = RunApp(config)  \n",
     "    display(Markdown('### Example1'))\n",
     "    display(Markdown('''default RunApp.'''))\n",
     "    display(rjson)\n",
-    "\n",
-    "    display(Markdown('---'))  \n",
-    "    display(Markdown(''))  \n",
     "\n",
     "    # Example2 --------------------------\n",
     "    class RunAppEditCsv(RunApp):\n",
