Fixed issue with overheating-app.ipynb

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,11 @@
     "                    comp_vals[dir] = full_dir\n",
     "            json_data = read_json(self.config[\"fpth_inputs\"])\n",
     "            for element in json_data:\n",
-    "                if element[\"name\"] == \"Comparison\":\n",
+    "                if element[\"name\"] == \"Benchmark\" or element[\"name\"] == \"As Designed\":\n",
+    "                    element[\"options\"] = comp_vals\n",
+    "                    if element[\"value\"] not in comp_vals.values():\n",
+    "                        element[\"value\"] = None               \n",
+    "                elif element[\"name\"] == \"Comparison\":\n",
     "                    element[\"options\"] = comp_vals\n",
     "                    for value in element[\"value\"]:\n",
     "                        if value not in comp_vals.values():\n",
@@ -1053,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1087,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "738def617b67478fb6e7c5ca2af1f8a8",
+       "model_id": "92c6949f517e456a8bf2d9b2390afcb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1097,7 +1101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6352703e71d4dc58d8a3f5c49735b8f",
+       "model_id": "b27f269618024c188e9a93e37b030558",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1144,7 +1148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32e3c03bcfd943af8f78db5228b68fdb",
+       "model_id": "51fbf67f799f45b0af4a77c1c987f1cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1158,7 +1162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b313b112b864479c8b3f47045f8c14bc",
+       "model_id": "c97582fb6985414496af69b713f7c974",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1248,7 +1252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33828092390345cf86129cab97d516e1",
+       "model_id": "a0ced3023f434434886c1a43c9ef9c28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1262,7 +1266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e456e6d47f04453a83a8bbadeb51c2b5",
+       "model_id": "6052175b6ea1452fb0d08f4b9afff330",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1276,7 +1280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6be22dcaf65b41d084998f5dde517b41",
+       "model_id": "f20bf4fa587a4e79afbd9bb1eebc7cb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1290,7 +1294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3059df801d3b4dd1878724910516d83a",
+       "model_id": "725db404c5874dd7b1a9193277e6a194",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1304,7 +1308,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "036917588ecd420998ce9832ba18eb65",
+       "model_id": "0053268dfcd840d2807bab93b7e0b739",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1318,7 +1322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0955a907395645a3a76b0c9ab2680e28",
+       "model_id": "26e7b2e88e524e429112080dc2e4caec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1332,7 +1336,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eecb47e76fe444cfacebe61f8b69f4c9",
+       "model_id": "ab8e151a0dee447e9b2027ac485c36b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1346,7 +1350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b21e045b31e4970bd227a7a84e578d6",
+       "model_id": "3d5a22d6e608490caa16bd131887a316",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1435,7 +1439,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2fe19458e9640f7b906bae688df4658",
+       "model_id": "7fde8d0b54b7493e99bb456bc0fe0e51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1449,7 +1453,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f887cc20471f425f95448df29e06adb9",
+       "model_id": "cbabcb50d8a447c3938d8032b6df52cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1463,7 +1467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4bf9126044e48b682febb1612a1f249",
+       "model_id": "9e6117966b8446a2811dcf8310dba9ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1477,7 +1481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c7cb4fb2140410696effa901b4899c3",
+       "model_id": "6b40f2423fc44e78a1c9702d76f02dca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1491,7 +1495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1917ce853ce407d904647c6dc0906e3",
+       "model_id": "cca2be8296fb4221bd3f1e29a29c255b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1505,7 +1509,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd3894ab2b1c4f188ffcda46e0775996",
+       "model_id": "9cd109c03b4e4fc8b03e015b7808ca28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1519,7 +1523,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edae054d8a6044f6a389bf21d1ee366e",
+       "model_id": "9e61f8d5a8914ee795f6241d9ca14661",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1533,7 +1537,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "709a132fcb454d939529ab37d1fba0ae",
+       "model_id": "464bb6902cf645188b35606a6e4bdd6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1593,7 +1597,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e064813daa640329b671448b152937c",
+       "model_id": "5a1ddcad5a534ce2801cbdf8ba938f35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1607,7 +1611,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5f5b987f8684d86abf731cec98d3c3b",
+       "model_id": "abd711f068d44345a5d38b8dd37383da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1621,7 +1625,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f73ca4b5b13c4c918beed7805e90045f",
+       "model_id": "9344c7d653ac4e3493bc7f3f798b076b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1647,7 +1651,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2c774ddc0d743bab4ab674ddeb555d0",
+       "model_id": "8b3c28b6804741a1ab62832c4a8b30a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1661,7 +1665,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "845ccd026bf2488d9236722efee65b46",
+       "model_id": "4c90bb2e31f4432bb199fee89ece662e",
        "version_major": 2,
        "version_minor": 0
       },
